app/main/default/objects/Jan29object__c/Jan29object__c.object-meta.xml
<CustomObject>
    <fields>
        <fullName>FieldA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieldC__c</fullName>
        <label>FieldC</label>
        <type>Date</type>
    </fields>
    <label>Jan29object</label>
    <nameField>
        <label>Jan29object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jan29object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>