app/main/default/objects/Jan29object__c/fields/FieldA__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FieldA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FieldA</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>