app/main/default/objects/Jan29object__c/fields/FieldB__c.field-meta.xml
<CustomObject>
    <fields>
        <!---->
        <fullName>FieldB__c</fullName>
        <label>FieldB</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>