app/main/default/objects/Jan29object__c/fields/FieldC__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>FieldC__c</fullName>
        <label>FieldC</label>
        <type>Date</type>
    </fields>
</CustomObject>